--- a/文章阅读.md
+++ b/文章阅读.md
@@ -1,5 +1,6 @@
 源代码地址:https://github.com/mit-pdos/xv6-riscv/tree/riscv
 ## chapter 0--前言
+qemu实际上相当于一个多核微处理器，本次操作系统的硬件通过qemu来模拟
 ### 0.1--进程和内存
 ![[Pasted image 20240428163522.png]]
 经过fork生成的父进程和子进程共享同样的内存内容，但是内存空间和所用寄存器不同（其中一个进程对变量的修改不会影响到另一个进程）
