--- a/文章阅读.md
+++ b/文章阅读.md
@@ -46,7 +46,8 @@ for(;;){
 	} 
 }
 ```
-前面提到，通过fork创建的父子进程拥有同样的内存内容，但是我们也说过当其中一个进程执行exec时，其内容会被替换。但是此时进程打开的文件描述符表并不会有所改变。所以我们可以很容易写出一个文件重定向的代码
+前面提到，通过fork创建的父子进程拥有同样的内存内容，但是我们也说过当其中一个进程执行exec时，其内容会被替换。但是此时进程打开的文件描述符表并不会有所改变。所以我们可以很容易写出一个文件重定向的代码.
+一个很实际的例子就是我们平时操作系统shell中调用echo等系统调用并不是直接shell调用exec，而是shell先做了调用一次fork再用fork出来的子进程调用echo。
 ```
 char *argv[2]; 
 argv[0] = "cat"; 
